# backend

./: .gcloudignore  Dockerfile  Pipfile  app.py  corn_disease_models_updated.keras  pyproject.toml  requirements.txt
